[package]
name = "crypto-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
rand = "0.8.5"
